--- a/TODO
+++ b/TODO
@@ -9,11 +9,13 @@ $Id$
 *SEV PF WHO	DESCRIPTION
 *********************************************************************
 9	KB	wxLayout:
-		- scrollbars don't appear immediately in long
-		  composeview messages  
+		- scrollbars don't appear immediately
+                  --> check why
 		- temparily disable layout while inserting/clearing
 		  window? Should speed up things N*(N-1) fold...
 		- scroll window if mouse is selecting outside
+
+9	KB	add xface button to composeview
 
 9	KB	Check before reopening a closed MailFolder in
 		MailCollector, some kind of MailFolder::IsOK()?
@@ -21,8 +23,6 @@ $Id$
 9	KB	check new mail after startup -- should be done already
 		--> seems problem with first folder listing not
 		    updating listing? CHECK
-
-9               initial dialogs (wxConfig errors) show unknown icon
 
 5	KB	subject in embedded rfc822 messages shows filename
 		instead???
