This and that, minor fixes.

--- a/TODO
+++ b/TODO
@@ -56,6 +56,12 @@ $Id$
 		mechanism for setting custom headers. Move Vadim's
 		code to SendMessaggeCC. Introduce SendMessage??
 
+9		Crash from MailFolder::OpenFolder() when clicking on a 
+		folder group in tree
+			1. why is profile value invalid
+			   (CreateEmptyProfile() broken?)
+			2. why does the tree attempt to open the group 
+			   as a folder?
 
 9	VZ	Folder Properties dialog: OK disabled, Apply sometimes 
 		enabled... impossible to change settings for existing
@@ -81,6 +87,7 @@ $Id$
 7 gtk		Mahogany occasionally doesn't terminate but remains in
 		gtk event loop without any open windows.
 6	VZ	All Folder create dialog pages have no HelpIDs set.
+5		File/Page Setup does nothing
 3		foldername in password prompt seems wrong
 3		URL highlighting in headers is missing (e.g. X-Url)
 ? win	VZ	lock files are sometimes left
