Useful little feature: ignore reply prefix when sorting by subject

--- a/TODO
+++ b/TODO
@@ -8,6 +8,10 @@ $Id$
 *********************************************************************
 *SEV PF WHO	DESCRIPTION
 *********************************************************************
+
+9	KB	Add hackerguide.lyx and LeakTracer to cvs.
+9	KB	Fix MModule.		
+
 9	KB	Crash from ~PathFinder() in wxMessageView::Print()
 		when printing more than one page
 9	KB	wxLayout:
@@ -21,6 +25,7 @@ $Id$
 		- wxIcon <-> wxBitmap which one to use?
 		- last line contains garbage
 		- editing behaves a bit funny still
+		- editing leaks MObjects
 
 9	KB	add xface button to composeview
 
