--- a/TODO
+++ b/TODO
@@ -9,22 +9,15 @@ $Id$
 *SEV PF WHO	DESCRIPTION
 *********************************************************************
 
-9	KB	Crash from ~PathFinder() in wxMessageView::Print()
-		when printing more than one page
-9	KB	wxLayout:
-		- scrollbars don't appear immediately
-		  --> check why
-		- printing: top of second page no laid-out correctly
-                  enforce one full layout before printing
-		- temporarily disable layout while inserting/clearing
-		  window? Should speed up things N*(N-1) fold...
-		- scroll window if mouse is selecting outside
-		- wxIcon <-> wxBitmap which one to use?
-		- last line contains garbage
-		- editing behaves a bit funny still
+6		implement temporary/fake Profile mode
+		--> add Suspend()/Discard()/Commit() methods to normal 
+		    profile which work with a temporary subgroup
+
+7	KB	wxLayout:
+		- editing leaks MObjects
+		- write editor plugin translating keysyms to actions
 9	KB	changing any properties, etc crashes immediately
 		in non-DEBUG for Micky
-		- editing leaks MObjects
 9	KB	add xface button to composeview
 
 9	KB	Check before reopening a closed MailFolder in
@@ -165,7 +158,6 @@ $Id$
 
 7		dnd for messages between folders and treectrl
 
-6		implement temporary/fake Profile mode
 5		add goto_next_unread to folderview
 5		add more buttons to folderview, such as
 		next/previous/goto_next_unread/catch up
