--- a/TODO
+++ b/TODO
@@ -14,6 +14,7 @@ $Id$
 		    profile which work with a temporary subgroup
 
 7	KB	wxLayout:
+		- reduce the scrollbar flickering somehow
 		- editing leaks MObjects
 		- write editor plugin translating keysyms to actions
 9	KB	changing any properties, etc crashes immediately
