ctrl-s/t in editor documented

--- a/doc/Manual.lyx
+++ b/doc/Manual.lyx
@@ -1,4 +1,4 @@
-#This file was created by <karsten> Sat Jul 24 22:44:52 1999
+#This file was created by <karsten> Mon Aug 30 21:14:39 1999
 #LyX 1.0 (C) 1995-1999 Matthias Ettrich and the LyX Team
 \lyxformat 2.15
 \textclass book
@@ -1747,7 +1747,7 @@ Key Bindings in the Message Editor
 \layout Standard
 \added_space_top 0.3cm \added_space_bottom 0.3cm \align center \LyXTable
 multicol5
-11 2 0 0 -1 -1 -1 -1
+13 2 0 0 -1 -1 -1 -1
 1 1 0 0
 1 0 0 0
 1 0 0 0
@@ -1758,6 +1758,8 @@ multicol5
 1 0 0 0
 0 0 0 0
 1 0 0 0
+0 1 0 0
+0 1 0 0
 0 1 0 0
 8 1 0 "" ""
 2 1 1 "" ""
@@ -1775,6 +1777,10 @@ multicol5
 0 8 1 0 0 0 0 "" ""
 0 8 1 0 0 0 0 "" ""
 0 2 1 0 0 0 0 "" ""
+0 8 1 0 0 0 0 "" ""
+0 8 1 0 0 0 0 "" ""
+0 8 1 0 0 0 0 "" ""
+0 8 1 0 0 0 0 "" ""
 0 8 1 0 0 0 0 "" ""
 0 8 1 0 0 0 0 "" ""
 0 8 1 0 0 0 0 "" ""
@@ -1827,6 +1833,14 @@ paste text from clipboard
 CTRL-INSERT
 \newline 
 
+\newline 
+CTRL-S
+\newline 
+search for text
+\newline 
+CTRL-T
+\newline 
+search same text again
 \layout Subsection
 
 Using the address book_3100_
