--- a/TODO
+++ b/TODO
@@ -8,8 +8,12 @@ $Id$
 *********************************************************************
 *SEV PF WHO	DESCRIPTION
 *********************************************************************
+9		Add routine to write large headers.
+
 6		make wxMApp react to options change event and call
 		SetupOnlineManager only when options change
+
+7	KB	group reply misses additional To entries
 
 9		cannot create new file from folder create dialog (M
 		bug, not wxGTK, save-as-file works!)
